examples/syntax-error/solution.clj
(ns codewars.solution)

(defn multiply [a b] - a b))
